# tensor-mesh-k8s-scheduler

./: DEMO.md  Makefile  README.md  environment.yml
benchmarks/: generate_plots.py
deploy/helm/tensor-mesh/: Chart.yaml  values.yaml
deploy/helm/tensor-mesh/templates/: daemonset.yaml  redis.yaml  scheduler.yaml
src/core/: go.mod  go.sum  main.go
src/core/pkg/tensormesh/: plugin.go
src/ebpf/: Cargo.toml
src/ebpf/src/: main.rs
src/ebpf/src/bpf/: bpf_helpers.h  probe.bpf.c  vmlinux.h
src/proto/: telemetry.proto
